# Chess_Game_new

./: .gitignore  CMakeLists.txt  README.md
Chess/: CMakeLists.txt
Chess/headers/: Bishop.h  Board.h  Engine.h  EventHandler.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  UI.h
Chess/src/: Bishop.cpp  Board.cpp  Engine.cpp  EventHandler.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  TestEngine.cpp  UI.cpp  main.cpp
TestChess/: CMakeLists.txt  TestChess.vcxproj  testTree.cpp
